# normies

./: 0001-from-b1d797b-insecure-feature-install-build-time-dependencies.patch  CMakeLists.txt  CPackConfig.cmake  Dockerfile  README.md
cmake/: Dependencies.cmake
pack/normies-dev/: CMakeLists.txt  dependencies.debian
pack_3rdparty/cutter/: CMakeLists.txt
pack_3rdparty/hotspot/: CMakeLists.txt  dependencies.debian  repositories.debian
